2008-10-11  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: New file.

	* wttjs.pl: Documentation added.  Path names of manakai/Whatpm
	library is removed.  "--help" option added.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Don't test attribute's ReadOnly-ness if the
	[PutForwards] extended attribute is set.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Make result page URL configurable.  Don't generate
	invalid JavaScript code even when there is no crash information
	available.  Link to the result page.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Test interface object even if NativeObject extended
	attribute is set, since I can't find any clause in the WebIDL spec
	that NativeObject implies NoInterfaceObject.  Support for tests on
	exception interface objects and exception host objects.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Some of skipped tests were counted as failed.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Don't execute a test if it is known a priori to crash
	the browser.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Skip a test if it tries to get an instance of the
	interface and then fails, since the purpose of the test is not
	determining whether the browser implements a way to instantiate
	the interface properly or not.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Label added to all tests.  Redundant dependency
	removed.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Test result submission form added.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Catch exceptions thrown by assignment to a ReadOnly
	property, to test only whether ReadOnly attribute is set or not.

2008-10-10  Wakaba  <wakaba@suika.fam.cx>

	* wttjs.pl: Inheritance support.  [Stringifies] support.
	Operation support.  Attribute support.
	(generate_id): Support for method/attribute names end with an
	uppercase letter.