@@ -191,6 +191,10 @@ following modules:</p>
 <p>A WebIDL parser and object model implementation, which is part of the
 Whatpm package <a href="http://suika.fam.cx/www/markup/html/whatpm/readme">http://suika.fam.cx/www/markup/html/whatpm/readme</a>.</p>
 </dd>
+<dd>
+<p>Note that <a href="http://suika.fam.cx/www/markup/html/whatpm/Whatpm/WebIDL.html">Whatpm::WebIDL</a> does not depend on any
+other module.</p>
+</dd>
 </li>
 </dl>
 <p>
