@@ -1,5 +1,9 @@
 2008-10-11  Wakaba  <wakaba@suika.fam.cx>
 
+	* wttjs.pl: Noted that Whatpm::WebIDL has no more dependency.
+
+2008-10-11  Wakaba  <wakaba@suika.fam.cx>
+
 	* Makefile: New file.
 
 	* wttjs.pl: Documentation added.  Path names of manakai/Whatpm
